<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_height="match_parent"
        tools:context=".controllers.EarnCoinActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageButton
                android:clickable="true"
                android:focusable="true"
                android:onClick="earnGoBack"
                android:layout_width="wrap_content"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:background="@drawable/rounded_app_colorr_menu"
                android:src="@drawable/ic_arrow_back_white_24dp"
                android:layout_height="wrap_content"/>

        <TextView
                android:layout_width="wrap_content"
                android:text="@string/earn_coins"
                android:textColor="@color/appMainColor"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                style="@style/customBoldCoiny"
                android:layout_height="wrap_content"/>

    </RelativeLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        app:cardBackgroundColor="@color/appMainColor"
                        app:cardElevation="20dp"
                        app:cardCornerRadius="10dp"
                        android:layout_weight="1"
                        app:cardUseCompatPadding="true"
                        android:layout_height="wrap_content">

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:padding="15dp"
                            android:gravity="center_vertical"
                            android:layout_height="250dp">

                        <ImageView
                                android:id="@+id/imageIcon"
                                android:layout_width="60dp"
                                android:layout_centerHorizontal="true"
                                android:src="@drawable/laptop"
                                android:layout_height="60dp"/>

                        <TextView
                                android:id="@+id/watchAd"
                                android:layout_below="@id/imageIcon"
                                android:text="@string/watch_ad"
                                android:layout_marginTop="5dp"
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:layout_below="@id/watchAd"
                                android:text="@string/_50_coins"
                                style="@style/customItalicsCoiny"
                                android:textColor="@color/silver"
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        app:cardBackgroundColor="@color/appMainColor"
                        app:cardElevation="20dp"
                        app:cardCornerRadius="10dp"
                        android:layout_weight="1"
                        app:cardUseCompatPadding="true"
                        android:layout_height="wrap_content">

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:padding="15dp"
                            android:gravity="center_vertical"
                            android:layout_height="250dp">

                        <ImageView
                                android:id="@+id/inviteIcon"
                                android:layout_width="60dp"
                                android:layout_centerHorizontal="true"
                                android:src="@drawable/iphone"
                                android:layout_height="60dp"/>

                        <TextView
                                android:id="@+id/inviteFriends"
                                android:layout_marginTop="5dp"
                                android:layout_below="@id/inviteIcon"
                                android:text="@string/invite_friends"
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:layout_below="@id/inviteFriends"
                                android:text="+1000 Coins"
                                style="@style/customItalicsCoiny"
                                android:textColor="@color/silver"
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        app:cardBackgroundColor="@color/appMainColor"
                        app:cardElevation="20dp"
                        app:cardCornerRadius="10dp"
                        android:layout_weight="1"
                        app:cardUseCompatPadding="true"
                        android:layout_height="wrap_content">

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:padding="15dp"
                            android:gravity="center_vertical"
                            android:layout_height="250dp">

                        <ImageView
                                android:id="@+id/starIcon"
                                android:layout_width="60dp"
                                android:layout_centerHorizontal="true"
                                android:src="@drawable/star"
                                android:layout_height="60dp"/>

                        <TextView
                                android:id="@+id/star"
                                android:layout_below="@id/starIcon"
                                android:text="@string/rate_us"
                                android:layout_marginTop="5dp"
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:layout_below="@id/star"
                                android:text="+250 Coins"
                                style="@style/customItalicsCoiny"
                                android:textColor="@color/silver"
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        app:cardBackgroundColor="@color/appMainColor"
                        app:cardElevation="20dp"
                        app:cardCornerRadius="10dp"
                        android:layout_weight="1"
                        app:cardUseCompatPadding="true"
                        android:layout_height="wrap_content">

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:padding="15dp"
                            android:gravity="center_vertical"
                            android:layout_height="250dp">

                        <ImageView
                                android:id="@+id/coinsIcon"
                                android:layout_width="60dp"
                                android:layout_centerHorizontal="true"
                                android:src="@drawable/coins"
                                android:layout_height="60dp"/>

                        <TextView
                                android:id="@+id/coins"
                                android:layout_marginTop="5dp"
                                android:layout_below="@id/coinsIcon"
                                android:text="@string/buy_coins"
                                android:textStyle="bold"
                                android:textColor="@color/white"
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:layout_below="@id/coins"
                                android:text="Costs Real Money"
                                style="@style/customItalicsCoiny"
                                android:textColor="@color/silver"
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</LinearLayout>